--- a/GameSample1/GameSample1.vcxproj
+++ b/GameSample1/GameSample1.vcxproj
@@ -61,7 +61,6 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)XLib\Source;$(SolutionDir)XEngine.Base;$(SolutionDir)XEngine.Render;$(SolutionDir)XEngine.Core</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -77,7 +76,6 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)XLib\Source;$(SolutionDir)XEngine.Base;$(SolutionDir)XEngine.Render;$(SolutionDir)XEngine.Core</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -90,6 +88,9 @@
   <ItemGroup>
     <ProjectReference Include="..\XEngine.Core\XEngine.Core.vcxproj">
       <Project>{b8914a5b-a366-4b57-86fd-788a6dfd14f6}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\XEngine.Render\XEngine.Render.vcxproj">
+      <Project>{25b57cc9-0f71-4901-ba27-3ea9952fa23c}</Project>
     </ProjectReference>
     <ProjectReference Include="..\XLib\XLib.vcxproj">
       <Project>{df81a513-72e3-4b74-b866-97f3bb61d45f}</Project>
