--- a/XEngine.Render.Shaders.Builder/XEngine.Render.Shaders.Builder.vcxproj
+++ b/XEngine.Render.Shaders.Builder/XEngine.Render.Shaders.Builder.vcxproj
@@ -114,6 +114,7 @@
     <ClInclude Include="XEngine.Render.Shaders.Builder.Files.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.ShadersList.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.SourcesCache.h" />
+    <ClInclude Include="XEngine.Render.Shaders.PackFile.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\XLib\XLib.vcxproj">
