--- a/XEngine.Render.Shaders.Builder/XEngine.Render.Shaders.Builder.vcxproj.filters
+++ b/XEngine.Render.Shaders.Builder/XEngine.Render.Shaders.Builder.vcxproj.filters
@@ -13,6 +13,6 @@
     <ClInclude Include="XEngine.Render.Shaders.Builder.Files.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.ShadersList.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.Common.h" />
-    <ClInclude Include="XEngine.Render.Shaders.Builder.RootSignaturesList.h" />
+    <ClInclude Include="XEngine.Render.Shaders.Builder.BindingLayoutsList.h" />
   </ItemGroup>
 </Project>
