--- a/XEngine.Render.Shaders.Builder/XEngine.Render.Shaders.Builder.vcxproj.filters
+++ b/XEngine.Render.Shaders.Builder/XEngine.Render.Shaders.Builder.vcxproj.filters
@@ -14,5 +14,6 @@
     <ClInclude Include="XEngine.Render.Shaders.Builder.ShadersList.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.Common.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.BindingLayoutsList.h" />
+    <ClInclude Include="XEngine.Render.Shaders.Builder.PipelinesList.h" />
   </ItemGroup>
 </Project>
