--- a/XEngine.Render.Shaders.Builder/XEngine.Render.Shaders.Builder.vcxproj
+++ b/XEngine.Render.Shaders.Builder/XEngine.Render.Shaders.Builder.vcxproj
@@ -113,6 +113,7 @@
     <ClInclude Include="XEngine.Render.Shaders.Builder.CompilerDXC.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.Files.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.BindingLayoutsList.h" />
+    <ClInclude Include="XEngine.Render.Shaders.Builder.PipelinesList.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.ShadersList.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.SourcesCache.h" />
   </ItemGroup>
