--- a/XEngine.Render.HAL.ShaderCompiler/XEngine.Render.HAL.ShaderCompiler.vcxproj.filters
+++ b/XEngine.Render.HAL.ShaderCompiler/XEngine.Render.HAL.ShaderCompiler.vcxproj.filters
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClInclude Include="XEngine.Render.HAL.BinaryFormat.h" />
+    <ClInclude Include="XEngine.Render.HAL.ShaderCompiler.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="XEngine.Render.HAL.ShaderCompiler.cpp" />
   </ItemGroup>
 </Project>
