--- a/XEngine.Render.MaterialShaderCompiler/XEngine.Render.MaterialShaderCompiler.vcxproj
+++ b/XEngine.Render.MaterialShaderCompiler/XEngine.Render.MaterialShaderCompiler.vcxproj
@@ -39,7 +39,7 @@
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{6664e1b3-7dcd-4210-9d6c-f4d218aed043}</ProjectGuid>
     <RootNamespace>XEngineRenderMaterialShaderCompiler</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.19041.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
@@ -279,6 +279,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ProjectReference Include="..\XEngine.Render.HAL.ShaderCompiler\XEngine.Render.HAL.ShaderCompiler.vcxproj">
+      <Project>{0e31d4f6-c1d4-4a6f-8c42-a0f7b2e4d9d9}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\XLib\XLib.vcxproj">
+      <Project>{df81a513-72e3-4b74-b866-97f3bb61d45f}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
