--- a/XEngine.Render.Shaders.Builder/XEngine.Render.Shaders.Builder.vcxproj.filters
+++ b/XEngine.Render.Shaders.Builder/XEngine.Render.Shaders.Builder.vcxproj.filters
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="XEngine.Render.Shaders.Builder.Main.cpp" />
+    <ClCompile Include="XEngine.Render.Shaders.Builder.EntryPoint.cpp" />
     <ClCompile Include="XEngine.Render.Shaders.Builder.SourcesCache.cpp" />
-    <ClCompile Include="XEngine.Render.Shaders.Builder.Files.cpp" />
+    <ClCompile Include="XEngine.Render.Shaders.Builder.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="XEngine.Render.Shaders.Builder.SourcesCache.h" />
-    <ClInclude Include="XEngine.Render.Shaders.Builder.Files.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.ShadersList.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.BindingLayoutsList.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.PipelinesList.h" />
+    <ClInclude Include="XEngine.Render.Shaders.Builder.h" />
   </ItemGroup>
 </Project>
