XEngine.Render.HAL.D3D12 WIP

--- a/XEngine.Render.HAL.D3D12/XEngine.Render.HAL.D3D12.vcxproj
+++ b/XEngine.Render.HAL.D3D12/XEngine.Render.HAL.D3D12.vcxproj
@@ -163,6 +163,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="D3D12Helpers.h" />
     <ClInclude Include="XEngine.Render.HAL.D3D12.h" />
   </ItemGroup>
   <ItemGroup>
@@ -172,6 +173,9 @@
     <ProjectReference Include="..\XLib\XLib.vcxproj">
       <Project>{df81a513-72e3-4b74-b866-97f3bb61d45f}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="XEngine.Render.HAL.D3D12.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
