--- a/XEngine.Render.HAL.D3D12/XEngine.Render.HAL.D3D12.vcxproj.filters
+++ b/XEngine.Render.HAL.D3D12/XEngine.Render.HAL.D3D12.vcxproj.filters
@@ -2,5 +2,9 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClInclude Include="XEngine.Render.HAL.D3D12.h" />
+    <ClInclude Include="D3D12Helpers.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="XEngine.Render.HAL.D3D12.cpp" />
   </ItemGroup>
 </Project>
