XEngine.Render.HAL.D3D12 WIP

--- a/XEngine.Render.HAL.Common/XEngine.Render.HAL.Common.vcxproj
+++ b/XEngine.Render.HAL.Common/XEngine.Render.HAL.Common.vcxproj
@@ -168,6 +168,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="XEngine.Render.HAL.Common.h" />
     <ClInclude Include="XEngine.Render.HAL.BinaryFormat.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
