--- a/XEngine.Render.Shaders.Builder/XEngine.Render.Shaders.Builder.vcxproj.filters
+++ b/XEngine.Render.Shaders.Builder/XEngine.Render.Shaders.Builder.vcxproj.filters
@@ -8,8 +8,8 @@
   <ItemGroup>
     <ClInclude Include="XEngine.Render.Shaders.Builder.SourcesCache.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.ShadersList.h" />
-    <ClInclude Include="XEngine.Render.Shaders.Builder.BindingLayoutsList.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.PipelinesList.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.h" />
+    <ClInclude Include="XEngine.Render.Shaders.Builder.PipelineLayoutsList.h" />
   </ItemGroup>
 </Project>
