--- a/XEngine.Render.HAL.Common/XEngine.Render.HAL.Common.vcxproj.filters
+++ b/XEngine.Render.HAL.Common/XEngine.Render.HAL.Common.vcxproj.filters
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClInclude Include="XEngine.Render.HAL.BinaryFormat.h" />
+    <ClInclude Include="XEngine.Render.HAL.ObjectFormat.h" />
     <ClInclude Include="XEngine.Render.HAL.Common.h" />
   </ItemGroup>
 </Project>
