--- a/XEngine.Render.Shaders.Builder/XEngine.Render.Shaders.Builder.vcxproj
+++ b/XEngine.Render.Shaders.Builder/XEngine.Render.Shaders.Builder.vcxproj
@@ -110,6 +110,9 @@
     <ClInclude Include="XEngine.Render.Shaders.Builder.SourcesCache.h" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\XEngine.Render.HAL.Common\XEngine.Render.HAL.Common.vcxproj">
+      <Project>{102d6f8c-faad-4fd3-9b3a-16923042465e}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\XEngine.Render.HAL.ShaderCompiler\XEngine.Render.HAL.ShaderCompiler.vcxproj">
       <Project>{0e31d4f6-c1d4-4a6f-8c42-a0f7b2e4d9d9}</Project>
     </ProjectReference>
