--- a/XEngine.Render.Shaders.PackFormat/XEngine.Render.Shaders.PackFormat.vcxproj
+++ b/XEngine.Render.Shaders.PackFormat/XEngine.Render.Shaders.PackFormat.vcxproj
@@ -14,7 +14,7 @@
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{e41c3648-b10a-4c33-a052-d98f8ed51ab0}</ProjectGuid>
-    <RootNamespace>XEngineRenderShadersPackFile</RootNamespace>
+    <RootNamespace>XEngineRenderShadersPackFormat</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -88,7 +88,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="XEngine.Render.Shaders.PackFile.h" />
+    <ClInclude Include="XEngine.Render.Shaders.PackFormat.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\XLib\XLib.vcxproj">
