--- a/XEngine.Render.Shaders.Builder/XEngine.Render.Shaders.Builder.vcxproj.filters
+++ b/XEngine.Render.Shaders.Builder/XEngine.Render.Shaders.Builder.vcxproj.filters
@@ -4,6 +4,8 @@
     <ClCompile Include="XEngine.Render.Shaders.Builder.EntryPoint.cpp" />
     <ClCompile Include="XEngine.Render.Shaders.Builder.SourcesCache.cpp" />
     <ClCompile Include="XEngine.Render.Shaders.Builder.cpp" />
+    <ClCompile Include="XEngine.Render.Shaders.Builder.PipelinesList.cpp" />
+    <ClCompile Include="XEngine.Render.Shaders.Builder.PipelineLayoutsList.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="XEngine.Render.Shaders.Builder.SourcesCache.h" />
