--- a/XC.Compiler/XC.Compiler.vcxproj.filters
+++ b/XC.Compiler/XC.Compiler.vcxproj.filters
@@ -2,6 +2,7 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="XC.Compiler.Main.cpp" />
+    <ClCompile Include="XC.Compiler.Tokenizer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="XC.Compiler.Tokenizer.h" />
