--- a/XEngine.Render.HAL.D3D12/XEngine.Render.HAL.D3D12.vcxproj.filters
+++ b/XEngine.Render.HAL.D3D12/XEngine.Render.HAL.D3D12.vcxproj.filters
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ClInclude Include="XEngine.Render.HAL.D3D12.h" />
     <ClInclude Include="D3D12Helpers.h" />
+    <ClInclude Include="XEngine.Render.HAL.D3D12.Translation.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="XEngine.Render.HAL.D3D12.cpp" />
